feat: improve UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,13 @@
 body {
   font-family: var(--font-prompt);
 }
+
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scroll-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
