--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,7 @@ body {
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
 }
+
+button {
+  cursor: pointer;
+}
