feat: implement internationalization for toast messages and error handling

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,9 @@
 body {
   font-family: var(--font-prompt);
 }
-
+.toaster {
+  font-family: var(--font-prompt) !important;
+}
 .scroll-hidden::-webkit-scrollbar {
   display: none;
 }
